# supercortelikes

./: .dockerignore  .env.example  .env.one.example  .env.vps.example  .gitignore  .trivyignore  Caddyfile  README.md  README_DEPLOY.md  README_VPS_DEPLOY.md  RELEASE_CHECKLIST.md  RELEASE_GA_CHECKLIST.md  docker-compose.gpu.yml  docker-compose.local.yml  docker-compose.one.yml  docker-compose.release.yml  docker-compose.vps.images.yml  docker-compose.vps.yml  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  render.yaml
benchmarks/: opuslike-suite.json
infra/: kustomization.yaml
reports/: demo-option-a.md  e2e-hardening.md  ga-commercial-readiness.md  (+11 more)
services/media-worker/: .gitignore  Dockerfile  Dockerfile.gpu  Dockerfile.serverless  pyproject.toml  requirements-ai.txt  requirements-gpu.txt  requirements-serverless.txt  requirements.txt
services/media-worker/scripts/: check_coverage.py
services/media-worker/src/media_worker/: __init__.py  app.py  captions.py  clips.py  composition.py  config.py  deepgram.py  errors.py  llm.py  logging_config.py  media.py  memory.py  metrics.py  models.py  pipeline.py  process.py  quality.py  rendering.py  runpod.py  runpod_handler.py  scoring.py  segmentation.py  seo.py  storage.py  transcription.py  vision.py  workspace.py
services/media-worker/tests/: test_api.py  test_captions.py  test_clips.py  test_composition.py  test_external_ai.py  test_media_recovery.py  test_pipeline_execution.py  test_runtime_recovery.py  test_scoring.py  test_segmentation.py  test_seo.py  test_vision.py  test_workspace.py
(+278 files in other folders)
