[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supercortelikes-media-worker"
version = "0.1.0"
description = "Executable AI and media pipeline for SuperCortesLikes"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.8,<3",
  "boto3>=1.35,<2",
  "prometheus-client>=0.21,<1",
]

[project.optional-dependencies]
test = ["pytest>=8,<9", "pytest-cov>=5,<7", "httpx>=0.27,<1"]
vision = [
  "numpy>=1.26,<3",
  "opencv-python-headless>=4.10,<5",
  "mediapipe>=0.10.14,<1; python_version >= '3.10'",
  "ultralytics>=8.3,<9; python_version >= '3.10'",
]
ai = [
  "whisperx>=3.3,<4; python_version >= '3.10'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["media_worker"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 60
